--- a/assets/css/carousel.css
+++ b/assets/css/carousel.css
@@ -1,5 +1,5 @@
 #container {
-    margin: 5%;
+    margin: 5% 0%;
 }
 
 .caroussel {
@@ -14,13 +14,13 @@
     justify-content: center;
 }
 
-.element {
+#container .element {
     width: 250px;
     height: auto;
     transition: transform .1s;
 }
 
-.element img{
+#container .element img{
     border-radius: 20%;
     padding: 0 2%;
 }
@@ -57,56 +57,63 @@
     transform: scale(1.2);
 }
 
-.caroussel_element{
-  float: left;
+#adviceCaroussel{
+    margin: 5% 0%;
 }
 
+#adviceCaroussel
 .avis{
-    border-radius: 10%;
-    padding: 0 2%;
-    background-color: #fff4ea; /* url("http://cedille-formation.ftalps.fr/wp-content/uploads/2022/12/un-message1.png") center center no-repeat */
-    width: 190%;
-    margin-left: 18%;
+  border-radius: 10%;
+  padding: 0 2%;
+  background-color: #fff4ea;
+  width: 115%;
 }
+
+#adviceCaroussel .element {
+  width: 70%;
+  height: auto;
+  transition: transform .1s;
+}
+
+
 .formation_name{
   font-size: 120%;
   text-align : center;
   padding: 5% 0 0 0;
-}
+  }
 
-.content{
+  .content{
   width: 90%;
-}
-
-.content p{
+  }
+ 
+  .content p{
   text-align : center;
-}
-.img2{
-/*   width: 50%;
- */  margin-left: 100%;
-}
+  }
 
-.author{
+  .img2{
+  margin-left: 100%;
+  }
+
+  .author{
   display: flex;
   flex-direction: row;
   justify-content: center;
   padding-bottom: 5%;
-}
-
-.author_icone, .author_name{
+  }
+  
+  .author_icone, .author_name{
   display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-}
-.author_icone{
-  width: 25%;
-  height: auto;
-}
+  flex-wrap: wrap;
+  justify-content: center;
+  }
+  
+  .author_icone{
+  width: 15%;
+  height: 15% !important;
+  margin-right: 5%;
+  }
 
-.author_name{
+  .author_name{
   margin-top: 10%;
-}
-
-/* body{
-  background-color: aqua !important;
-} */
+  } 
+  
