--- a/assets/css/single-formations.css
+++ b/assets/css/single-formations.css
@@ -156,15 +156,15 @@
 /*______________MOBILE__________*/
 @media (max-width : 435px) {
   #single_formation_titre {
-    margin-top: 85% !important;
+    margin-top: 90% !important;
   }
 }
-
-@media (max-width : 500px) {
+@media (min-width : 436px) and (max-width : 500px) {
   #single_formation_titre {
     margin-top: 55% !important;
   }
-
+}
+@media (max-width : 500px) {
   .single_formation_icone {
     width: 20% !important;
     height: 17% !important;
@@ -195,7 +195,7 @@
 
 @media (min-width : 501px) and (max-width : 630px) {
   #single_formation_titre {
-    margin-top: 45% !important;
+    margin-top: 48% !important;
   }
 }
 
@@ -211,7 +211,7 @@
   }
 
   #single_formation_titre {
-    margin-top: 35%;
+    margin-top: 40%;
   }
 
   #single_formation_h1 h1 {
@@ -282,7 +282,7 @@
 
   #single_formation_sidebar_left {
     width: 35%;
-    top: 125px;
+    top: 180px;
     font-size: 75%;
     margin-bottom: 350px;
   }
@@ -373,7 +373,7 @@
 
   .single_formation_sidebar_isDownPage {
     position: fixed;
-    top: -3% !important;
+    top: 30% !important;
     height: auto !important;
     background-color: #ffc61a !important;
     width: 22% !important;
@@ -384,10 +384,12 @@
   }
 }
 
+
+/* PC */
 @media (min-width : 1101px) {
   .sidebar_pc_fix {
     position: fixed;
-    top: 126px;
+    top: 210px;
     height: auto;
   }
 
