--- a/assets/css/contact-css.css
+++ b/assets/css/contact-css.css
@@ -21,6 +21,7 @@
 @media screen and (max-width: 767px) {
     #contact{
         top: 310px !important;
+        right: 5px;
     }
     #phone, #email{
         width: 40px;
